Fixes img overflow

--- a/unb-gama/style.css
+++ b/unb-gama/style.css
@@ -1459,7 +1459,9 @@ span.publishing-info.has-flags{
 
 #profile-menu-dropdown img {
   border-radius: 100%;
+  max-width: 50px;
   height: 50px;
+  overflow: hidden;
 }
 
 #profile-menu-dropdown .fa.fa-angle-down {
